--- a/tests/dataset_stats.ipynb
+++ b/tests/dataset_stats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "id": "c50d7182",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "id": "0e68ff3e",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "id": "2339d7df",
    "metadata": {},
    "outputs": [
@@ -41,7 +41,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/nix-shell-85469-0/ipykernel_86169/1339210798.py:4: DtypeWarning: Columns (4) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/nix-shell-85469-0/ipykernel_111084/1339210798.py:4: DtypeWarning: Columns (4) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(\n"
      ]
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "id": "9ba4af9a",
    "metadata": {},
    "outputs": [
@@ -1774,7 +1774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "id": "dca6b118",
    "metadata": {},
    "outputs": [
@@ -1782,12 +1782,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/nix-shell-85469-0/ipykernel_86169/2472114137.py:14: SettingWithCopyWarning: \n",
+      "/tmp/nix-shell-85469-0/ipykernel_111084/2380288621.py:12: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  unique['success'] = unique['attack_id'].isin(exploit_attacks)\n"
+      "  unique['success'] = unique['attack_status'] == 'success'\n"
      ]
     },
     {
@@ -1812,66 +1812,66 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>attack_technique</th>\n",
-       "      <th>total</th>\n",
        "      <th>successful</th>\n",
        "      <th>success_rate</th>\n",
+       "      <th>total_queries</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>boolean</td>\n",
+       "      <td>35</td>\n",
+       "      <td>0.7778</td>\n",
+       "      <td>203845</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>error</td>\n",
        "      <td>45</td>\n",
-       "      <td>45</td>\n",
        "      <td>1.0000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>time</td>\n",
-       "      <td>45</td>\n",
-       "      <td>39</td>\n",
-       "      <td>0.8667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>boolean</td>\n",
-       "      <td>45</td>\n",
-       "      <td>35</td>\n",
-       "      <td>0.7778</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>stacked</td>\n",
-       "      <td>45</td>\n",
-       "      <td>30</td>\n",
-       "      <td>0.6667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>union</td>\n",
-       "      <td>45</td>\n",
-       "      <td>15</td>\n",
-       "      <td>0.3333</td>\n",
+       "      <td>40995</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>inline</td>\n",
-       "      <td>45</td>\n",
        "      <td>5</td>\n",
        "      <td>0.1111</td>\n",
+       "      <td>1389</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>stacked</td>\n",
+       "      <td>30</td>\n",
+       "      <td>0.6667</td>\n",
+       "      <td>24659</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>time</td>\n",
+       "      <td>39</td>\n",
+       "      <td>0.8667</td>\n",
+       "      <td>24713</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>union</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0.3333</td>\n",
+       "      <td>39591</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  attack_technique  total  successful  success_rate\n",
-       "1            error     45          45        1.0000\n",
-       "4             time     45          39        0.8667\n",
-       "0          boolean     45          35        0.7778\n",
-       "3          stacked     45          30        0.6667\n",
-       "5            union     45          15        0.3333\n",
-       "2           inline     45           5        0.1111"
+       "  attack_technique  successful  success_rate  total_queries\n",
+       "0          boolean          35        0.7778         203845\n",
+       "1            error          45        1.0000          40995\n",
+       "2           inline           5        0.1111           1389\n",
+       "3          stacked          30        0.6667          24659\n",
+       "4             time          39        0.8667          24713\n",
+       "5            union          15        0.3333          39591"
       ]
      },
      "metadata": {},
@@ -1882,32 +1882,40 @@
     "def calculate_attack_success_rate(df):\n",
     "    \"\"\"\n",
     "    Calculate success rate per attack technique based on unique attack IDs.\n",
-    "    \n",
     "    Args:\n",
     "        df: DataFrame with columns 'attack_id', 'attack_technique', 'attack_status'\n",
-    "    \n",
     "    Returns:\n",
-    "        DataFrame with attack_technique, total_attacks, successful_attacks, success_rate\n",
+    "        DataFrame with attack_technique, successful_attacks, success_rate, total_queries\n",
     "    \"\"\"\n",
-    "    # First, fetch the information on whether the attack was a success for each attack campaign.\n",
-    "    exploit_attacks = set(df[df['attack_stage'] == 'exploit']['attack_id'])\n",
+    "    # Get unique attack campaigns and determine success from attack_status\n",
     "    unique = df.drop_duplicates('attack_id')\n",
-    "    unique['success'] = unique['attack_id'].isin(exploit_attacks)\n",
+    "    unique = df.drop_duplicates('attack_id')\n",
+    "    unique['success'] = unique['attack_status'] == 'success'\n",
+    "\n",
+    "    # Then we group by technique and provide successful count and success rate.\n",
+    "    result = unique.groupby('attack_technique')['success'].agg(['sum']).reset_index()\n",
+    "    result.columns = ['attack_technique', 'successful']\n",
     "    \n",
-    "    # Then we group by technique and provide both count and sum + a success rate.\n",
-    "    result = unique.groupby('attack_technique')['success'].agg(['count', 'sum']).reset_index()\n",
-    "    result.columns = ['attack_technique', 'total', 'successful']\n",
-    "    result['success_rate'] = (result['successful'] / result['total']).round(4)\n",
-    "    result = result.sort_values('success_rate', ascending=False)\n",
+    "    # Add column counting total queries (rows) with each technique in original df\n",
+    "    query_counts = df.groupby('attack_technique').size().reset_index(name='total_queries')\n",
+    "    result = result.merge(query_counts, on='attack_technique')\n",
+    "    \n",
+    "    # Calculate success rate based on unique campaigns only\n",
+    "    campaign_counts = unique.groupby('attack_technique').size().reset_index(name='total_campaigns')\n",
+    "    result = result.merge(campaign_counts, on='attack_technique')\n",
+    "    result['success_rate'] = (result['successful'] / result['total_campaigns']).round(4)\n",
+    "    \n",
+    "    # Remove the total_campaigns column and reorder\n",
+    "    result = result[['attack_technique', 'successful', 'success_rate', 'total_queries']]\n",
+    "    \n",
     "    display(result)\n",
-    "    \n",
     "\n",
     "calculate_attack_success_rate(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "id": "fafeeb45",
    "metadata": {},
    "outputs": [
@@ -1940,7 +1948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "5d6716ce",
    "metadata": {},
    "outputs": [
@@ -1994,7 +2002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "id": "df39675c",
    "metadata": {},
    "outputs": [
@@ -2028,7 +2036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "id": "f062fd42",
    "metadata": {},
    "outputs": [
@@ -2089,7 +2097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "id": "7d183469",
    "metadata": {},
    "outputs": [
@@ -2108,8 +2116,8 @@
       "\u001b[31mKeyError\u001b[39m: 'template_split'",
       "\nThe above exception was the direct cause of the following exception:\n",
       "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[23]\u001b[39m\u001b[32m, line 21\u001b[39m\n\u001b[32m     19\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mNumber of attacks in challenging: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdf_a.shape[\u001b[32m0\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     20\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mNumber of normal in challenging: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdf_n.shape[\u001b[32m0\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m21\u001b[39m \u001b[43mprint_stats_original\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[23]\u001b[39m\u001b[32m, line 2\u001b[39m, in \u001b[36mprint_stats_original\u001b[39m\u001b[34m(df)\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mprint_stats_original\u001b[39m(df : pd.DataFrame):\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m     df_og = df[\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mtemplate_split\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m == \u001b[33m\"\u001b[39m\u001b[33moriginal\u001b[39m\u001b[33m\"\u001b[39m]\n\u001b[32m      3\u001b[39m     df_chall = df[df[\u001b[33m\"\u001b[39m\u001b[33mtemplate_split\u001b[39m\u001b[33m\"\u001b[39m] == \u001b[33m\"\u001b[39m\u001b[33mchallenging\u001b[39m\u001b[33m\"\u001b[39m]\n\u001b[32m      5\u001b[39m     tids_og = df_og[\u001b[33m\"\u001b[39m\u001b[33mquery_template_id\u001b[39m\u001b[33m\"\u001b[39m].unique()\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[33]\u001b[39m\u001b[32m, line 21\u001b[39m\n\u001b[32m     19\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mNumber of attacks in challenging: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdf_a.shape[\u001b[32m0\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     20\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mNumber of normal in challenging: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdf_n.shape[\u001b[32m0\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m21\u001b[39m \u001b[43mprint_stats_original\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[33]\u001b[39m\u001b[32m, line 2\u001b[39m, in \u001b[36mprint_stats_original\u001b[39m\u001b[34m(df)\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mprint_stats_original\u001b[39m(df : pd.DataFrame):\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m     df_og = df[\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mtemplate_split\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m == \u001b[33m\"\u001b[39m\u001b[33moriginal\u001b[39m\u001b[33m\"\u001b[39m]\n\u001b[32m      3\u001b[39m     df_chall = df[df[\u001b[33m\"\u001b[39m\u001b[33mtemplate_split\u001b[39m\u001b[33m\"\u001b[39m] == \u001b[33m\"\u001b[39m\u001b[33mchallenging\u001b[39m\u001b[33m\"\u001b[39m]\n\u001b[32m      5\u001b[39m     tids_og = df_og[\u001b[33m\"\u001b[39m\u001b[33mquery_template_id\u001b[39m\u001b[33m\"\u001b[39m].unique()\n",
       "\u001b[36mFile \u001b[39m\u001b[32m/nix/store/p2zy44d2xhj54hcc0n18lhnm5qnwsx7l-python3-3.12.10-env/lib/python3.12/site-packages/pandas/core/frame.py:4102\u001b[39m, in \u001b[36mDataFrame.__getitem__\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   4100\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.columns.nlevels > \u001b[32m1\u001b[39m:\n\u001b[32m   4101\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._getitem_multilevel(key)\n\u001b[32m-> \u001b[39m\u001b[32m4102\u001b[39m indexer = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   4103\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[32m   4104\u001b[39m     indexer = [indexer]\n",
       "\u001b[36mFile \u001b[39m\u001b[32m/nix/store/p2zy44d2xhj54hcc0n18lhnm5qnwsx7l-python3-3.12.10-env/lib/python3.12/site-packages/pandas/core/indexes/base.py:3812\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3807\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[32m   3808\u001b[39m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc.Iterable)\n\u001b[32m   3809\u001b[39m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[32m   3810\u001b[39m     ):\n\u001b[32m   3811\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[32m-> \u001b[39m\u001b[32m3812\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01merr\u001b[39;00m\n\u001b[32m   3813\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[32m   3814\u001b[39m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[32m   3815\u001b[39m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[32m   3816\u001b[39m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[32m   3817\u001b[39m     \u001b[38;5;28mself\u001b[39m._check_indexing_error(key)\n",
       "\u001b[31mKeyError\u001b[39m: 'template_split'"
